crates/term/src/snapshots/evildoer__tests__suite__render_empty.snap
---
source: crates/term/src/tests.rs
expression: terminal.backend()
---
"  1                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
