crates/term/src/snapshots/evildoer__tests__suite__render_with_content.snap
---
source: crates/term/src/tests.rs
expression: terminal.backend()
---
"  1 Hello, World!                                                               "
"  2 This is a test.                                                             "
"  3 Line 3.                                                                     "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
